--- a/tutorial Save and load models.ipynb
+++ b/tutorial Save and load models.ipynb
@@ -183,7 +183,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "47f926ea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1136,7 +1138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
