from M1 Macbook Air

--- a/tutorial Tune hyperparameters with the Keras Tuner.ipynb
+++ b/tutorial Tune hyperparameters with the Keras Tuner.ipynb
@@ -2,8 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2803b96b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 2, 3, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5cde243",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.index(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e2f51e",
    "metadata": {},
    "outputs": [],
    "source": []
