from M1 Macbook Air

--- a/tutorial Load CSV data.ipynb
+++ b/tutorial Load CSV data.ipynb
@@ -490,7 +490,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "8002846a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
