from M1 Macbook Air

--- a/tutorial Load CSV data.ipynb
+++ b/tutorial Load CSV data.ipynb
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3aeb2a8a",
+   "id": "e2131649",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ab68b282",
+   "id": "d8c3a512",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1a5e502b",
+   "id": "54477b7a",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "46e151f4",
+   "id": "1778ee39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "83a8137e",
+   "id": "e3a5159d",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cbe8584",
+   "id": "f5fd2409",
    "metadata": {},
    "source": [
     "###### Caching"
@@ -1315,7 +1315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c1e269",
+   "id": "7edc8e77",
    "metadata": {},
    "source": [
     "###### Multiple files"
@@ -1324,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "5e0c8305",
+   "id": "a1303a0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "6fe6f3e1",
+   "id": "bb6c432b",
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "cbcc42dd",
+   "id": "6d50b8da",
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "5fa4685e",
+   "id": "4a37b359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "1dd28b35",
+   "id": "505aac14",
    "metadata": {},
    "outputs": [
     {
@@ -1447,14 +1447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "id": "65229cd9",
+   "execution_count": 163,
+   "id": "e89eeeb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
-    "\n",
+    "temp = 0\n",
     "def make_images(features):\n",
     "    image = [None] * 400\n",
     "    new_feats = {}\n",
@@ -1475,8 +1475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "a63390a6",
+   "execution_count": 164,
+   "id": "88a79d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,8 +1488,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 165,
+   "id": "094171cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 146,
-   "id": "61144cc6",
+   "id": "626171bb",
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "42808693",
+   "id": "a19abb76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "603e4300",
+   "id": "fabc9b98",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb0c06d",
+   "id": "d704fbba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1561,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4feec4",
+   "id": "fed99229",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1569,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508d598d",
+   "id": "bf0a79d0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1577,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85f7b231",
+   "id": "18fbc48e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1585,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b6837f1",
+   "id": "82965e39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1593,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3adfb3dd",
+   "id": "7a43f9c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1601,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1cb977a",
+   "id": "6affa971",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1609,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d6b5f3a",
+   "id": "2519a904",
    "metadata": {},
    "outputs": [],
    "source": []
