--- a/tutorial Load CSV data.ipynb
+++ b/tutorial Load CSV data.ipynb
@@ -214,7 +214,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "cfc3078a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +272,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "205e981d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1423,7 +1427,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "626171bb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2311,7 +2317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
