from M1 Macbook Air

--- a/tutorial Load CSV data.ipynb
+++ b/tutorial Load CSV data.ipynb
@@ -2145,23 +2145,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "id": "16920d9e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<KerasTensor: shape=(None, 3) dtype=float32 (created by layer 'category_encoding_4')>"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'titanic_file_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtitanic_file_path\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'titanic_file_path' is not defined"
+     ]
     }
    ],
    "source": [
-    "x"
+    "titanic_file_path"
    ]
   },
   {
@@ -2317,7 +2318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
