--- a/tutorial Load a pandas DataFrame 2.ipynb
+++ b/tutorial Load a pandas DataFrame 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bd7d49f2",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5249c247",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "89ead083",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9acc847e",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "08744f21",
    "metadata": {},
    "outputs": [],
@@ -61,27 +61,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7852c8e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metal device set to: Apple M1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-04 08:55:16.819448: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2022-08-04 08:55:16.819548: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
+      "2022-08-04 08:55:16.845694: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
+      "2022-08-04 08:55:16.896420: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n",
+      "2022-08-04 08:55:16.910285: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:113] Plugin optimizer for device_type GPU is enabled.\n"
+     ]
+    }
+   ],
    "source": [
     "layer.adapt(adapt_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e27b3819",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([-1.4142135 , -0.70710677,  0.        ], dtype=float32)>"
+       "<tf.Tensor: shape=(3,), dtype=float32, numpy=array([-1.4142137, -0.7071068,  0.       ], dtype=float32)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,8 +111,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "c881cc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = [[0, 0, 0], [1, 1, 1]]\n",
+    "t2 = [[2, 2, 2], [3, 3, 3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b5d9cc6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       "array([[0., 0., 0.],\n",
+       "       [1., 1., 1.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1 = tf.cast(t1, dtype=tf.float32)\n",
+    "t1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "3bfee0d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       "array([[2., 2., 2.],\n",
+       "       [3., 3., 3.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2 = tf.cast(t2, dtype=tf.float32) \n",
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "3adc3bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       " array([[0., 0., 0.],\n",
+       "        [1., 1., 1.]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       " array([[2., 2., 2.],\n",
+       "        [3., 3., 3.]], dtype=float32)>]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values=[]\n",
+    "values.append(t1)\n",
+    "values.append(t2)\n",
+    "values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ef5e26fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3, 2), dtype=float32, numpy=\n",
+       "array([[[0., 2.],\n",
+       "        [0., 2.],\n",
+       "        [0., 2.]],\n",
+       "\n",
+       "       [[1., 3.],\n",
+       "        [1., 3.],\n",
+       "        [1., 3.]]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun = tf.stack(values, axis=-1)\n",
+    "fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb704246",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -115,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
