--- a/tutorial Load a pandas DataFrame 2.ipynb
+++ b/tutorial Load a pandas DataFrame 2.ipynb
@@ -180,28 +180,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "ef5e26fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(2, 2, 3), dtype=float32, numpy=\n",
-       "array([[[0., 0., 0.],\n",
-       "        [2., 2., 2.]],\n",
+       "<tf.Tensor: shape=(2, 3, 2), dtype=float32, numpy=\n",
+       "array([[[0., 2.],\n",
+       "        [0., 2.],\n",
+       "        [0., 2.]],\n",
        "\n",
-       "       [[1., 1., 1.],\n",
-       "        [3., 3., 3.]]], dtype=float32)>"
+       "       [[1., 3.],\n",
+       "        [1., 3.],\n",
+       "        [1., 3.]]], dtype=float32)>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fun = tf.stack(values, axis=1)\n",
+    "fun = tf.stack(values, axis=2)\n",
     "fun"
    ]
   },
