from M1 Macbook Air

--- a/note.ipynb
+++ b/note.ipynb
@@ -2,126 +2,141 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "25716bc5",
+   "execution_count": 28,
+   "id": "38e81a45",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "a = [1.2, 2.5, 3.7, 4.6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "e530fedc",
+   "execution_count": 54,
+   "id": "a1588457",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = tf.random.normal([3, 3, 2])\n",
-    "t2 = tf.random.normal([3, 3, 2])"
+    "class Counter:\n",
+    "    def __init__(self, stop):\n",
+    "        self.current = -100    # 현재 숫자 유지, 0부터 지정된 숫자 직전까지 반복\n",
+    "        self.stop = stop    # 반복을 끝낼 숫자\n",
+    " \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current < self.stop:    # 현재 숫자가 반복을 끝낼 숫자보다 작을 때\n",
+    "            r = self.current            # 반환할 숫자를 변수에 저장\n",
+    "            self.current += 1           # 현재 숫자를 1 증가시킴\n",
+    "            return r                    # 숫자를 반환\n",
+    "        else:                           # 현재 숫자가 반복을 끝낼 숫자보다 크거나 같을 때\n",
+    "            raise StopIteration         # 예외 발"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5953d51e",
+   "execution_count": 55,
+   "id": "0071a2ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Counter' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [55]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m Counter(\u001b[38;5;241m3\u001b[39m):\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Counter' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "for i in Counter(3):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e512665a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(3, 3, 2), dtype=float32, numpy=\n",
-       "array([[[-0.26434615, -0.6805235 ],\n",
-       "        [-0.97812   ,  0.35514578],\n",
-       "        [-0.03363752, -1.1262499 ]],\n",
-       "\n",
-       "       [[ 2.0834806 ,  0.6468455 ],\n",
-       "        [ 0.92016   , -0.79960084],\n",
-       "        [ 0.22740962,  0.51522946]],\n",
-       "\n",
-       "       [[ 0.5849644 ,  0.7644525 ],\n",
-       "        [ 0.7018904 , -0.8432159 ],\n",
-       "        [-0.41014498, -1.1248293 ]]], dtype=float32)>"
+       "3.7"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t1"
+    "b.__next__()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7139c912",
+   "execution_count": 34,
+   "id": "069469b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(3, 3, 2), dtype=float32, numpy=\n",
-       "array([[[-0.5813757 ,  1.6184088 ],\n",
-       "        [-0.24274835,  0.38060433],\n",
-       "        [ 0.6311598 , -1.2493638 ]],\n",
-       "\n",
-       "       [[ 1.5842286 ,  0.5239691 ],\n",
-       "        [-0.56721383,  0.2700439 ],\n",
-       "        [ 0.90118647, -0.62104625]],\n",
-       "\n",
-       "       [[ 0.08610526, -0.41170973],\n",
-       "        [-0.3615915 ,  1.1801256 ],\n",
-       "        [ 0.00383392, -1.9785084 ]]], dtype=float32)>"
+       "['__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__length_hint__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__next__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "5dde4ba1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(3, 3, 4), dtype=float32, numpy=\n",
-       "array([[[-0.26434615, -0.6805235 , -0.5813757 ,  1.6184088 ],\n",
-       "        [-0.97812   ,  0.35514578, -0.24274835,  0.38060433],\n",
-       "        [-0.03363752, -1.1262499 ,  0.6311598 , -1.2493638 ]],\n",
-       "\n",
-       "       [[ 2.0834806 ,  0.6468455 ,  1.5842286 ,  0.5239691 ],\n",
-       "        [ 0.92016   , -0.79960084, -0.56721383,  0.2700439 ],\n",
-       "        [ 0.22740962,  0.51522946,  0.90118647, -0.62104625]],\n",
-       "\n",
-       "       [[ 0.5849644 ,  0.7644525 ,  0.08610526, -0.41170973],\n",
-       "        [ 0.7018904 , -0.8432159 , -0.3615915 ,  1.1801256 ],\n",
-       "        [-0.41014498, -1.1248293 ,  0.00383392, -1.9785084 ]]],\n",
-       "      dtype=float32)>"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.concat((t1, t2), axis=-1)"
+    "dir(b)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4443ae",
+   "id": "3f6b3584",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8417394",
    "metadata": {},
    "outputs": [],
    "source": []
